Import of ABALAMA/App-MBUtiny-1.01 from CPAN.
gitpan-cpan-distribution: App-MBUtiny
gitpan-cpan-version:      1.01
gitpan-cpan-path:         ABALAMA/App-MBUtiny-1.01.tar.gz
gitpan-cpan-author:       ABALAMA
gitpan-cpan-maturity:     released

--- a/INSTALL
+++ b/INSTALL
@@ -9,9 +9,9 @@ DIST CREATING
 
     perl Makefile.PL
     make
-    make tarconfig
     make test
     make tardist
+    # D:\Temp\p2e\perl2exe.exe -v -noopt bin\mbutiny
 
 CREATE NEW VERSION (FOR DEVELOPER ONLY)
 
