Import of ABALAMA/App-MBUtiny-1.02 from CPAN.
gitpan-cpan-distribution: App-MBUtiny
gitpan-cpan-version:      1.02
gitpan-cpan-path:         ABALAMA/App-MBUtiny-1.02.tar.gz
gitpan-cpan-author:       ABALAMA
gitpan-cpan-maturity:     released

--- a/INSTALL
+++ b/INSTALL
@@ -11,6 +11,7 @@ DIST CREATING
     make
     make test
     make tardist
+    # perl -Ilib bin\mbutiny -d -c share\conf\mbutiny.conf test
     # D:\Temp\p2e\perl2exe.exe -v -noopt bin\mbutiny
 
 CREATE NEW VERSION (FOR DEVELOPER ONLY)
