--- a/INSTALL
+++ b/INSTALL
@@ -11,7 +11,7 @@ DIST CREATING
     make
     make test
     make tardist
-    # perl -Ilib bin\mbutiny -d -c share\conf\mbutiny.conf test
+    # perl -Ilib bin\mbutiny -d -c conf\mbutiny.conf test
     # D:\Temp\p2e\perl2exe.exe -v -noopt bin\mbutiny
 
 CREATE NEW VERSION (FOR DEVELOPER ONLY)
@@ -20,3 +20,4 @@ CREATE NEW VERSION (FOR DEVELOPER ONLY)
     * CHANGES            -- Result of command: localtime | gclip
     * lib/App/MBUtiny.pm -- In documentation (VERSION) & in code $VERSION
     * bin/mbutiny        -- In documentation (VERSION)
+    * sftp://abalama@web.sourceforge.net:22/home/project-web/app-mbutiny/htdocs
